@@ -18,7 +18,7 @@ PROPERTIES="live"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS=""
-IUSE="clang debug +dep doc nls optimization security strong-optimization sqlite tools zsh-completion"
+IUSE="clang debug +dep doc linguas_de linguas_ru nls optimization security strong-optimization sqlite tools zsh-completion"
 
 RDEPEND="app-shells/push
 	sqlite? ( >=dev-db/sqlite-3 )
