@@ -1,1 +1,1 @@
-DIST form_history_control-1.3.0.1-fx+sm.xpi 406398 SHA256 d2d7869e798d7d557e095562095933d38d22d90127075a5f5fd021c2a850eb34 SHA512 4ab99ced03d5f8f0b85af338643b5f04ce8bc4b31299eb0578dce6fe0fbde2d64ba39fac80e6891ca9c866464bf51e09a63f12e8ca92caa86446253fa0bca113 WHIRLPOOL 6c5941fc62a5ab3e2c363e47c9c8ff4d04c48e85c4f355d2faf134f7a1da16d65a9e1ae29af4a986f69d646534c2fdd43d727f559231102601e8f531694679c9
+DIST form_history_control-1.3.0.2-sm+fx.xpi 406626 SHA256 0e09c079f6d6980ba5e7a85cd268146f891857c1c7c5c639bc70d4c47cb6b591 SHA512 dda48cc6cd6256e1c870a3484981c3332befaa9d7b10ccb88e4952bd810b5346456edf04292b840317e84c04805e051092e004ae5beaea9b1917696d9d455f39 WHIRLPOOL 4dbd1150ce03e7ea67624e31503df8db438cdfb68c1ce38d8fb24c82112c8474af3f2e8ed7fa1b93d47a428866bd7afbfe77ee580656ba13aee94a5799d92ccf
