@@ -1,1 +1,1 @@
-DIST requestpolicy-0.5.26-sm+fx.xpi 147270 SHA256 568ad37de85f44a2d2fd1f2262eeadb9df6867e1f616f78cc95f782c35a07d16 SHA512 9e3e1881d360b5360ebb8f730c5c1c98d29a91c244b69714cf7f91008eba70d4fe4152be2921409e46a16c9f7844893e7027920f4a44e49e0ec94e4105763362 WHIRLPOOL 6e76daad53ba663778ab75d874811d80fca9e34dd4ae83c11db7fe34502678341225bd78c0fe4f10c49696bec44a16e9aff7f4c9fa6ab8fed0399fd714f919df
+DIST requestpolicy-0.5.27-fx+sm.xpi 172839 SHA256 fb4a1371d4e14b18f30cd8206fd40db101fff391805ba8f0b744b6365ae362de SHA512 05b6ca1c52e8d05fa555e2e81e840392397e90465d9748619ca307b8faa5d0908d889c55b94084343f7cea7abbae22f89aaf419ca54ca0ecce73ac2ac44c9fda WHIRLPOOL 49f0bdd06a4ad561ce2981f125a3b4e301ef0752891540452db60b053c9e93bd15ea327d0636550677d9f4aef9d694664cd2ebfc83d16c063af0e33a51edb093
