@@ -2,7 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*requestpolicy-0.5.26 (05 Jul 2012)
+*requestpolicy-0.5.27 (20 Jul 2012)
+
+  20 Jul 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
+*requestpolicy-0.5.26 (06 Jul 2012)
 
   06 Jul 2012; Martin Väth <martin@mvath.de>
   Version bump, remove old ebuild.
