@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*form-history-control-1.3.0.2 (20 Jul 2012)
+
+  20 Jul 2012; Martin Väth <martin@mvath.de>
+  Bump version. Remove old ebuild.
+
 *form-history-control-1.3.0.1 (06 Jul 2012)
 
   06 Jul 2012; Martin Väth <martin@mvath.de>
